[package]
name = "phasius"
version = "0.3.0"
edition = "2021"
authors = ["Wouter De Coster decosterwouter@gmail.com"]
license = "MIT"
description = "A tool to visualize phase block structure from many bam/cram files"
readme = "README.md"
homepage = "https://github.com/wdecoster/phasius"
repository = "https://github.com/wdecoster/phasius"
keywords = ["ont", "pacbio", "cram", "bam", "alignment", "phasing"]
categories = ["command-line-utilities", "science"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "3.2.6", features = ["derive"] }
env_logger = "0.11.6"
log = "0.4.26"
plotly = "0.12.1"
rayon = "1.10.0"
rust-htslib = "0.49.0"
unzip-n = "0.1.2"

[dev-dependencies]
ctor = "0.3.6"

[profile.release]
strip = true  # Automatically strip symbols from the binary.
codegen-units = 1
lto = true
