[package]
name = "phasius"
version = "0.7.0"
edition = "2021"
authors = ["Wouter De Coster decosterwouter@gmail.com"]
license = "MIT"
description = "A tool to visualize phase block structure from many bam/cram files"
readme = "README.md"
homepage = "https://github.com/wdecoster/phasius"
repository = "https://github.com/wdecoster/phasius"
keywords = ["ont", "pacbio", "cram", "bam", "alignment", "phasing"]
categories = ["command-line-utilities", "science"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.5", features = ["derive"] }
env_logger = "0.11.9"
log = "0.4.29"
plotly = "0.14.1"
rayon = "1.11.0"
rust-htslib = { git = "https://github.com/wdecoster/rust-htslib.git" }
unzip-n = "0.1.4"

[dev-dependencies]
ctor = "0.6.3"

[profile.release]
strip = true  # Automatically strip symbols from the binary.
codegen-units = 1
lto = true
